fix text align

--- a/src/App.css
+++ b/src/App.css
@@ -125,6 +125,7 @@ p {
     margin-left: 1.5rem;
     margin-right: 1.5rem;
     padding: 0;
+    text-align: center;
 }
 
 #basicinfo {
